--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "server": "node lib/server.js",
+    "nodemon": "nodemon lib/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^28.0.1"
+    "jest": "^28.0.1",
+    "nodemon": "^2.0.15"
+  },
+  "dependencies": {
+    "express": "^4.18.0"
   }
 }
